updated new sponsor logos and descriptions

--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -28,6 +28,32 @@
         <div class="row h-left">
             <div class="col sm-12">
                 <div class="bullet-group blue">
+                    <h5 class="text-uppercase text-bold">Gold Sponsors</h5>
+                    <div class="pattern-between row h-left expand collapse margin-top-10">
+                        <div class="col sm-2 md-1 background-pattern pattern-tartan pattern-small height-tiny"></div>
+                        <div class="col sm-2 md-1 background-pattern pattern-split-circles pattern-small height-tiny"></div>
+                        <div class="col sm-2 md-1 background-pattern pattern-stacked-bars pattern-small height-tiny"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
+                <a href="https://www.perficient.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8ed45aa4d60e49c78acd266fbe5b37ef.png" alt="Perficient logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Perficient</h6>
+                <p>Perficient is the leading digital transformation consulting firm serving Global 2000 and enterprise customers throughout North America. With unparalleled information technology, management consulting and creative capabilities, we deliver vision, execution and value with outstanding digital experience, business optimization and industry solutions. We are a certified, award-winning MicroStrategy partner with the breadth of expertise needed to help customers drive mission-critical and time-sensitive business decisions and get the maximum value from their BI investments.</p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+
+
+        <div class="row h-left">
+            <div class="col sm-12">
+                <div class="bullet-group blue">
                     <h5 class="text-uppercase text-bold">Silver Sponsors</h5>
                     <div class="pattern-between row h-left expand collapse margin-top-10">
                         <div class="col sm-2 md-1 background-pattern pattern-tartan pattern-small height-tiny"></div>
@@ -39,13 +65,25 @@
         </div>
         <div class="row h-left">
             <div class="col md-5 lg-3">
+                <a href="http://automatedinsights.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8d462229500f4f90bfcd8a511e64a96a.png" alt="Automated Insights logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Automated Insights</h6>
+                <p>Automated Insights (Ai) helps organizations make better business decisions, faster. By empowering data-driven organizations with Ai’s proprietary natural language generation (NLG) platform, Wordsmith, businesses are able to deliver the right insight, to the right person, at the right time and in the easiest-to-understand medium—the written word. Wordsmith makes exploring, discovering, and communicating insights easier than ever before.</p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
+            <div class="col md-5 lg-3">
                 <a href="http://www.datafactz.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0e503373565c493bbf4923b515eb0fe1.png" alt="DatafactZ logo">
                 </a>
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">DatafactZ</h6>
-                <p>DataFactZ is a Business Analytics company that helps enterprises manage and leverage data with a suite of Data Engineering, Data Science and Decision Science services. Our passion for technology and analytics enable us to develop solutions for clients that transform business problems into competitive advantage. We’ll help you harness the power of data and become truly Data Driven. Whether you’re new to analytics or highly mature, DataFactZ will help you get to the next level.</p>
+                <p>DataFactZ is a Business Analytics company that helps enterprises manage and leverage data with a suite of Data Engineering, Data Science and Decision Science services.  Our passion for technology and analytics enable us to develop solutions for clients that transform business problems into a competitive advantage.  We’ll help you harness the power of data and become truly Data Driven.  Whether you’re new to analytics or highly mature, DataFactZ will help you get to the next level.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -57,7 +95,19 @@
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Datastrong</h6>
-                <p>Datastrong enables leaders to gain actionable insight from complex data to drive strategic decisions that lead to better outcomes. We deliver innovative solutions to manage, store and analyze the massive data that fuels today’s digital enterprise. With expertise in business intelligence, data warehousing and software development, we leverage best-inbreed technologies along with proven methodologies to deliver quality, consistency and value. With Datastrong, leaders across the federal government and commercial sector gain the confidence to act on insight.</p>
+                <p>At Datastrong, we drive strategic decisions and deliver better outcomes by enabling leaders to gain actionable insight from complex data. Our team includes experts with multidisciplinary experience who see beyond the numbers to understand the bigger picture. We share a dedication to your mission and a commitment to excellence to ensure you achieve results.  Organizations across government and the commercial sector need a partner that can help make sense of business data, provide actionable insight and strategic guidance to drive more effective decisions.  As a MicroStrategy Partner, ServiceNow Partner, AWS Partner, and Informatica partner,  Datastrong is your partner.</p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
+                <a href="http://www.exasol.com/en" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/00d35b41c63b44668872863097b1caea.png" alt="Exasol logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Exasol</h6>
+                <p><em>Company description coming soon!</em></p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -73,18 +123,7 @@
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
-        <div class="row h-left">
-            <div class="col lg-3 md-4">
-                <a href="https://www.perficient.com/" target="_blank" class="ratio sixteen-nine">
-                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8ed45aa4d60e49c78acd266fbe5b37ef.png" alt="Perficient logo">
-                </a>
-            </div>
-            <div class="col md-7 lg-6">
-                <h6 class="text-uppercase text-bold">Perficient</h6>
-                <p>Perficient is the leading digital transformation consulting firm serving Global 2000 and enterprise customers throughout North America. With unparalleled information technology, management consulting and creative capabilities, we deliver vision, execution and value with outstanding digital experience, business optimization and industry solutions. We are a certified, award-winning MicroStrategy partner with the breadth of expertise needed to help customers drive mission-critical and time-sensitive business decisions and get the maximum value from their BI investments.</p>
-            </div>
-            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
-        </div>
+        
         <div class="row h-left">
             <div class="col lg-3 md-4">
                 <a href="https://sensecorp.com/" target="_blank" class="ratio sixteen-nine">
@@ -92,8 +131,8 @@
                 </a>
             </div>
             <div class="col md-7 lg-6">
-                <h6 class="text-uppercase text-bold">Sensecorp</h6>
-                <p>Sense Corp powers insight-driven organizations. We accelerate the entire transformation lifecycle, from strategy through implementation. We deliver outcomes by transforming data into insights. We unlock value in your most critical interactions with digital transformation. We are regularly recognized as a Best Place to Work by Austin, Dallas, and St. Louis Business Journals. With operations in Austin, Atlanta, Columbus, Dallas, Houston, San Antonio, and St. Louis we serve mid-market to Fortune 50 companies. Visit us at www.sensecorp.com</p>
+                <h6 class="text-uppercase text-bold">Sense Corp</h6>
+                <p>Sense Corp powers insight-driven organizations. We turn data into actionable insights and transform organizations for the digital era. Our people, culture, and how we engage with clients are key differentiators. Brilliant, Creative, Human, and Fun exemplify who we are. Regularly recognized as a Best Place to Work, we have operations in Austin, Columbus, Dallas, Houston, Minneapolis, and St. Louis and serve mid-market to Fortune 50 companies. Founded in 1996, Sense Corp has delivered exceptional results to hundreds of the world’s largest global organizations and complex government agencies. Visit us at <a href="www.sensecorp.com">www.sensecorp.com</a> to learn more.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -148,13 +187,25 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
+                <a href="http://www.gensquared.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e46de80785bd426c892e3b70ec6195d7.png" alt="Gensquared logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Gensquared</h6>
+                <p><em>Company description coming soon!</em></p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
                 <a href="https://www.inteldatasolutions.com" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/a0f58eae742e4319883f3a8a11085909.png" alt="Intelligent Data Solutions logo">
                 </a>
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Intelligent Data Solutions</h6>
-                <p>IDS - Intelligent Data Solutions and Pitney Bowes have joined forces to offer MicroStrategy users advanced and enhanced analytics through Geo-enrichment by offering a vast amount of Geo Spatial data and processes to complement existing BI and Data Warehousing solutions. Special offerings and discounts available just for conference attendees.</p>
+                <p>IDS - Intelligent Data Solutions and Pitney Bowes offer MicroStrategy users the ability to enhance, improve, and complement existing BI and Data Warehousing solutions with a vast set of demographic, social, and geo-spatial data. Learn how to leverage your customer's social and demographic profile for marketing, sales, and loyalty programs.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -167,6 +218,19 @@
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Invexer</h6>
                 <p>Invexer is a professional services and product company that delivers best value BI services and solutions for a variety of industries using MicroStrategy platform. We have exceptionally deep expertise in developing plugins, custom BI applications, widgets and visualizations using MicroStrategy SDK. Please stop by our booth to check out our PDF export plugin.</p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
+                <a href="https://www.mapbox.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/ecc143ab25d54218b632455061b44b2b.png" alt="Mapbox logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Mapbox</h6>
+                <p>Mapbox is the mapping and location data platform for mobile and web applications. We provide building blocks to add location features like maps, search, and navigation into any application or website you create. Industry leaders like MicroStrategy choose Mapbox to deliver beautiful custom maps as the canvas for data visualizations. We help optimize business operations by visualizing geospatial data and creating fast maps with millions of points. Learn more at <a href="mapbox.com">mapbox.com</a> and follow us at <a href="blog.mapbox.com">blog.mapbox.com</a>.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -228,7 +292,7 @@
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Vitara</h6>
-                <p>Founded by Microstrategy alumni Vitara has a relentless focus on enhancing user experience with easy to use visualizations that can convey data stories effectively. Vitara's flagship product Vitarcharts is a production ready , plug and play , fully supported library of 25+ stunning visuals for MicroStrategy Desktop, Web and Mobile.</p>
+                <p>Founded by Microstrategy alumni Vitara has a relentless focus on enhancing end user experience of visualisations in Microstrategy. Vitara's flagship product Vitarcharts is a production ready , plug and play , fully supported  library of 25+ stunning visuals for MicroStrategy -Desktop, Web and Mobile.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
