updated sponsor logos in slider

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -550,6 +550,13 @@
 				<div class="row sponsor-logo-wrapper collapse h-left logo-slider">
 					<div class="slide">
 
+						<a href="http://automatedinsights.com/" target="_blank" class="ratio sixteen-nine">
+							<img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8d462229500f4f90bfcd8a511e64a96a.png" alt="Automated Insights logo">
+						</a>
+
+					</div>
+					<div class="slide">
+
 						<a href="http://www.datafactz.com/" target="_blank" class="sponsor-logo">
 							<img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0e503373565c493bbf4923b515eb0fe1.png" alt="DatafactZ logo" width="333" height="76" />
 						</a>
@@ -563,11 +570,34 @@
 						</a>
 
 					</div>
+					<div class="slide">
+
+						<a href="http://www.exasol.com/en" target="_blank" class="ratio sixteen-nine">
+							<img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/00d35b41c63b44668872863097b1caea.png" alt="Exasol logo">
+						</a>
+
+					</div>
 
 					<div class="slide">
 
 						<a href="https://fivetran.com/" target="_blank" class="sponsor-logo">
 							<img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3add6b3ecbf745b59050e3079cc49a25.png" alt="Fivetran logo" width="499" height="151" />
+						</a>
+
+					</div>
+					
+					<div class="slide">
+
+						<a href="http://www.gensquared.com/" target="_blank" class="ratio sixteen-nine">
+							<img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e46de80785bd426c892e3b70ec6195d7.png" alt="Gensquared logo">
+						</a>
+
+					</div>
+
+					<div class="slide">
+
+						<a href="https://www.mapbox.com/" target="_blank" class="ratio sixteen-nine">
+							<img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/ecc143ab25d54218b632455061b44b2b.png" alt="Mapbox logo">
 						</a>
 
 					</div>
