new special events page

--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -1,105 +1,205 @@
-<section id="hero-banner" class="banner sub-page special-events">
-	<div class="row h-left">
-		<div class="col lg-9">
-			<div class="line thick tiny navy"></div>
-			<h1 class="text-large">Special events at World&nbsp;2018</h1>
-			<p class="h3">Special sessions, workshops, and networking opportunities throughout the&nbsp;event.</p>
-		</div>
+<div id='special-events'>
+
+	<div class="pattern-between row expand collapse">
+		<div class="col release background-pattern pattern-split-circles pattern-small height-small">&nbsp;</div>
+		<div class="col release background-pattern pattern-square-dots pattern-small height-small">&nbsp;</div>
+		<div class="col release background-pattern pattern-sparse-triangles pattern-small height-small">&nbsp;</div>
+		<div class="col release background-pattern pattern-vertical-bars pattern-small height-small">&nbsp;</div>
+		<div class="col release background-pattern pattern-tartan pattern-small height-small">&nbsp;</div>
 	</div>
-</section>
-
-<section id="special-events-info" class="no-padding-top">
-	<div class="row h-left">
-
-		<div id="education" class="col sm-12">
-			<div class="special-event-box">
-				<div class="header-box education">
-					<div class="text-label navy">Education event</div>
-					<h3 class="h2 text-medium text-normal">10.116 Introduction to Data Discovery: Storytelling and&nbsp;Collaborating</h3>
+	<section id="hero-banner" class="background-red section-square-dots">
+		<div class="row h-left">
+			<div class="col lg-9">
+				<div class="bullet-group large z-2">
+					<h1 class="text-large">Special events at World 2019</h1>
+					<p class="h3">Special sessions, workshops, and networking opportunities throughout the&nbsp;event.</p>
 				</div>
-				<div class="content-box">
-					<div class="row collapse">
-						<div class="col md-6">
-							<div class="line thick small navy"></div>
-							<p>An introduction to dossiers and MicroStrategy Library, this class develops the skills to leverage MicroStrategy's next generation data discovery. Learn how to create interactive dossiers that transform your data into visualizations to quickly and easily analyze trends and key performance indicators. Learn best practice design principles, how to share your insights across the enterprise through MicroStrategy Library, and how to deploy responsive mobile dossier&nbsp;apps.</p>
+			</div>
+		</div>
+		<div class="pattern-overlay z-1">
+			<img alt="" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/282e6134455b40389bc2e0c3aaec4030.png" width="739" height="441" />
+		</div>
+	</section>
+
+	<section class="background-orange section-circle-dots">
+		<div class="row h-left">
+
+			<div id="education" class="col md-6 sm-12">
+				<div class="special-event-box">
+					<div class="header-box education bullet-group">
+						<div class="text-label navy">Education event</div>
+						<h3 class="h2 text-medium text-normal">What’s New in 2019</h3>
+					</div>
+					<div class="content-box">
+						<div class="row collapse">
+							<div class="col">
+								<div class="line thick small navy"></div>
+								<p>All user roles can take this class to use the new MicroStrategy 2019 features to explore the connection between an agile environment and the departmental/enterprise environment, within the context of data governance. Use MicroStrategy Workstation to understand the effects of administrative tasks that maximize the value of your MicroStrategy environments and applications. Ensure data integrity and security while you monitor and analyze your environments, users, and data with Platform Analytics. Empower your sales people and executives by connecting to your data with HyperIntelligence, which uses augmented analytics to display information cards on web pages. Write back to your data with actionable analytics, so that decision makers have the information that they need to make the right decision.</p>
+							</div>
+							<div class="col">
+								<!-- <div class="text-label navy outline">Date and time</div> -->
+								<div class="triangle-group navy">
+									<p><strong>Monday, February 4</strong><br>
+									11:45am - 3:45pm</p>
+									<!-- <a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253dfb8a8b73-444f-498c-af16-05c83c1e270c" class="cta-button small blue carat" target="_blank">Session A</a>
+									<a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253d2623b721-1245-4851-8e6c-56993c39df01" class="cta-button small blue carat" target="_blank">Session B</a> -->
+								</div>
+							</div>
 						</div>
-						<div class="col md-6">
+					</div>
+				</div>
+			</div>
+
+			<div id="education" class="col md-6 sm-12">
+				<div class="special-event-box">
+					<div class="header-box education bullet-group">
+						<div class="text-label navy">Education event</div>
+						<h3 class="h2 text-medium text-normal">Transform Your Data-Driven Organization: The Intelligent Enterprise</h3>
+					</div>
+					<div class="content-box">
+						<div class="row collapse">
+							<div class="col">
+								<div class="line thick small navy"></div>
+								<p>To navigate and thrive in an increasingly complex BI datascape, forward-leaning companies are racing to transform into an Intelligent Enterprise – capable of using data, people, and enterprise assets in aggregated and unique ways. In this class, evaluate where your organization stands today, understand how to establish a foundation for growth, and drive Business Intelligence adoption within your enterprise. Topics covered include data governance, process and change management, enterprise mobility, building your team, and empowering users. At the end of this course, you will be armed with the tools to start transforming your organization into an Intelligent Enterprise as you advance on your personal and enterprise BI journey.</p>
+							</div>
+							<div class="col">
+								<!-- <div class="text-label navy outline">Date and time</div> -->
+								<div class="triangle-group navy">
+									<p><strong>Monday, February 4</strong><br>
+									11:45am - 3:45pm</p>
+									<!-- <a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253dfb8a8b73-444f-498c-af16-05c83c1e270c" class="cta-button small blue carat" target="_blank">Session A</a>
+									<a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253d2623b721-1245-4851-8e6c-56993c39df01" class="cta-button small blue carat" target="_blank">Session B</a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="background-blue section-ribbon">
+			<div class="row h-left">
+			<div id="partner-day" class="col background-blue">
+					<div class="special-event-box">
+						<div class="text-label navy">Partner Event</div>
+						<div class="header-box five-k bullet-group">
+							<h3 class="h2 text-medium text-normal ">Partner Day</h3>
+						</div>
+						<div class="content-box">
+							<p>Partner Success will be the key topic this year, with exciting announcements you do not want to miss!</p>
+							<p>Please join our World 2019 Partner Forum, Wednesday, February 6th to hear about how to sell and uniquely go to market with MicroStrategy, how to support your salesforce and practitioners with state of the art demos and content, and of course recognition of extraordinary performances!</p>
+	
+							<!-- <div class="text-label navy outline">Date and time</div> -->
+							<div class="triangle-group navy margindown10">
+								<p><strong>Wednesday, February 6</strong><br>
+								TBD</p>
+							</div>
+							<a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-36-2c0e177416a0487b95c82069ccaa35ce.aspx?p=36" class="cta-button small blue carat" target="_blank">Learn More</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="background-green section-stacked-bars">
+			<div class="row h-left">
+
+				<div id="womens-networking" class="col lg-6">
+					<div class="special-event-box">
+						<div class="header-box womens-networking bullet-group">
+							<div class="text-label navy">Networking Event</div>
+							<h3 class="h2 text-medium text-normal">Women's Networking Event</h3>
+						</div>
+						<div class="content-box">
+							<div class="line thick navy small"></div>
+							<p>Join MicroStrategy customers, partners, and employees for appetizers and cocktails as we kick-off MicroStrategy World. Mingle with inspiring women leaders and savvy female executives doing great work and delivering results across the world of&nbsp;Analytics.</p>
 							<div class="text-label navy outline">Date and time</div>
 							<div class="triangle-group navy">
 								<p><strong>Monday, January 15</strong><br>
-								1:00pm - 5:00pm</p>
-								<a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253dfb8a8b73-444f-498c-af16-05c83c1e270c" class="cta-button small blue carat" target="_blank">Session A</a>
-								<a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253d2623b721-1245-4851-8e6c-56993c39df01" class="cta-button small blue carat" target="_blank">Session B</a>
-							</div>
-							<div class="triangle-group navy">
-								<p><strong>Thursday, January 18</strong><br>
-								8:30am - 12:30pm</p>
-								<a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253d8d2a0158-b4b9-47ad-b39a-8ff360b2ac0f" class="cta-button small blue carat" target="_blank">Session A</a>
-								<a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253d910fb3b3-13e9-428f-b46c-ccade52cdfb4" class="cta-button small blue carat" target="_blank">Session B</a>
+								3:30pm - 5:30pm</p>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-
-		<div id="womens-networking" class="col lg-6">
-			<div class="special-event-box">
-				<div class="header-box womens-networking">
-					<div class="text-label navy">Networking Event</div>
-					<h3 class="h2 text-medium text-normal">Women's Networking Event</h3>
-				</div>
-				<div class="content-box">
-					<div class="line thick navy small"></div>
-					<p>Join MicroStrategy customers, partners, and employees for appetizers and cocktails as we kick-off MicroStrategy World. Mingle with inspiring women leaders and savvy female executives doing great work and delivering results across the world of&nbsp;Analytics.</p>
-					<div class="text-label navy outline">Date and time</div>
-					<div class="triangle-group navy">
-						<p><strong>Monday, January 15</strong><br>
-						3:30pm - 5:30pm</p>
+			
+				<div id="welcome-reception" class="col lg-6">
+					<div class="special-event-box">
+						<div class="header-box welcome-reception">
+							<div class="text-label navy">Networking event</div>
+							<h3 class="h2 text-medium text-normal">MicroStrategy World 2018 Welcome&nbsp;Reception</h3>
+						</div>
+						<div class="content-box">
+							<div class="line thick small navy"></div>
+							<p>Welcome to MicroStrategy World 2018! Join industry partners, peers and MicroStrategy executives for drinks and hors d’oeuvres in the Exhibit Hall.  Featured exhibitors will showcase their products and technologies at this important networking event- don’t miss&nbsp;it!</p>
+							<div class="text-label navy outline">Date and time</div>
+							<div class="triangle-group navy margindown10">
+								<p><strong>Monday, January 15</strong><br>
+								6:30pm - 8:30pm</p>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
 
-		<div id="welcome-reception" class="col lg-6">
-			<div class="special-event-box">
-				<div class="header-box welcome-reception">
-					<div class="text-label navy">Networking event</div>
-					<h3 class="h2 text-medium text-normal">MicroStrategy World 2018 Welcome&nbsp;Reception</h3>
-				</div>
-				<div class="content-box">
-					<div class="line thick small navy"></div>
-					<p>Welcome to MicroStrategy World 2018! Join industry partners, peers and MicroStrategy executives for drinks and hors d’oeuvres in the Exhibit Hall.  Featured exhibitors will showcase their products and technologies at this important networking event- don’t miss&nbsp;it!</p>
-					<div class="text-label navy outline">Date and time</div>
-					<div class="triangle-group navy margindown10">
-						<p><strong>Monday, January 15</strong><br>
-						6:30pm - 8:30pm</p>
+			</div>
+		</section>
+
+			
+		<section class="background-navy">
+			<div class="row h-left">
+				
+				<div id="5k" class="col lg-6">
+					<div class="special-event-box">
+						<div class="header-box five-k">
+							<div class="text-label navy">Charity Event</div>
+							<h3 class="h2 text-medium text-normal">5K run</h3>
+						</div>
+						<div class="content-box">
+							<div class="line thick small navy"></div>
+							<p><em>Details coming soon!</em></p>
+
+							<div class="text-label navy outline">Date and time</div>
+							<div class="triangle-group navy margindown10">
+								<p><strong>Tuesday, January 16</strong><br>
+								6:00am</p>
+							</div>
+						</div>
 					</div>
 				</div>
+				
 			</div>
+		</section>
+
+		</div>
+	</section>
+
+	<section id="call-to-action">
+		<div class="final-cta">
+			<div class="row">
+				<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0" />
+			</div>
+			<a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
 		</div>
 
-		<div id="5k" class="col lg-6">
-			<div class="special-event-box">
-				<div class="header-box five-k">
-					<div class="text-label navy">Charity Event</div>
-					<h3 class="h2 text-medium text-normal">5K run</h3>
-				</div>
-				<div class="content-box">
-					<div class="line thick small navy"></div>
-					<p><em>Details coming soon!</em></p>
-
-					<div class="text-label navy outline">Date and time</div>
-					<div class="triangle-group navy margindown10">
-						<p><strong>Tuesday, January 16</strong><br>
-						6:00am</p>
-					</div>
-				</div>
+		<div class="final-date">
+			<div class="icon-lockup text-white">
+				<img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png" width="32" height="32" />
+				<p>
+					<strong class="text-uppercase text-bold text-white">February</strong>
+					4th – 6th 2019
+				</p>
+			</div>
+			<div class="icon-lockup text-white">
+				<img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png" width="32" height="32" />
+				<p>
+					<strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
+					Phoenix Convention Center
+				</p>
 			</div>
 		</div>
+	</section>
 
-	</div>
-</section>
+</div>
+
 
 <style>
 	.register-btn-bottom {display:none;}
