adjusted columns and breakpoints

--- a/HTML/partner-day.html
+++ b/HTML/partner-day.html
@@ -2,15 +2,13 @@
 
     <section id="hero" class="no-padding-bottom padding-top-40">
         <div class="row expand no-padding">
-            <div class="col md-12 lg-6">
-                <h1>World Partner Day 2019</h1>
-                <h2 class="text-blue text-normal sub-text">Partner success with exciting announcements you do not want to miss!</h2>
-                
+            <div class="col md-6 lg-6">
+                <h1 class="text-bold text-blue">World Partner Day 2019</h1>
+                <h2 class="text-normal sub-text">Partner success with exciting announcements you do not want to miss!</h2>
             </div>
-            <div class="col lg-6 collapse">
+            <div class="col md-6 lg-6 collapse">
                     <img alt="" class="photo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2e0aa210bfcb4aee81f5ed949dfab7b4.jpg" width="1334" height="890" />
             </div>
-
         </div>
 
         <div class="pattern-between row expand collapse">
@@ -76,7 +74,6 @@
         </div>
     </section>
     
-
     <section id="call-to-action">
             <div class="final-cta">
                 <div class="row">
@@ -107,4 +104,8 @@
 <style>
  .register-btn-bottom {display:none;}
 div.bottom {padding:0;}
+#partner-day-page .pattern-overlay .static-pattern.pos-bottom {
+    bottom: -20%;
+    right: 77%;
+}
 </style>
